Add option to disable notifications

--- a/extension/options.html
+++ b/extension/options.html
@@ -13,6 +13,10 @@
   <label>
     <input type="checkbox" id="fixed-nav">
     Keep navbar on top.
+  </label><br>
+  <label>
+    <input type="checkbox" id="notify">
+    Show notifications when I have new messages on Scratch.
   </label>
   <script src="options.js"></script>
 </body>
