Add settings for #bringItBack stuff

--- a/extension/options.html
+++ b/extension/options.html
@@ -4,16 +4,27 @@
   <title>Furball Settings</title>
   <style>
     body {
-      padding: 10px;
+      padding-left: 10px;
+      padding-right: 10px;
       margin: 0;
     }
   </style>
 </head>
 <body>
+  <h2>Layout</h2>
   <label>
     <input type="checkbox" id="fixed-nav">
     Keep navbar on top.
   </label><br>
+  <label>
+    <input type="checkbox" id="bb-discuss">
+    Replace <b>Tips</b> with <b>Discuss</b>
+  </label><br>
+  <label>
+    <input type="checkbox" id="bb-wiki">
+    Replace <b>About</b> with <b>Wiki</b>
+  </label>
+  <h2>Notifications</h2>
   <label>
     <input type="checkbox" id="notify">
     Show notifications when I have new messages on Scratch.
