--- a/extension/options.html
+++ b/extension/options.html
@@ -18,11 +18,15 @@
   </label><br>
   <label>
     <input type="checkbox" id="bb-discuss">
-    Replace <b>Tips</b> with <b>Discuss</b>
+    Replace <b>Tips</b> with <b>Discuss</b>.
   </label><br>
   <label>
     <input type="checkbox" id="bb-wiki">
-    Replace <b>About</b> with <b>Wiki</b>
+    Replace <b>About</b> with <b>Wiki</b>.
+  </label><br>
+  <label>
+    <input type="checkbox" id="forum-popout-reply">
+    Keep reply editor at bottom of page while editing.
   </label>
   <h2>Notifications</h2>
   <label>
