Add badge control setting.

--- a/extension/options.html
+++ b/extension/options.html
@@ -27,6 +27,10 @@
     <input type="checkbox" id="notify">
     Show notifications when I have new messages on Scratch.
   </label>
+  <label>
+    <input type="checkbox" id="badge">
+    Show the number of Scratch messages I have in the toolbar. 
+  </label>
   <script src="options.js"></script>
 </body>
 </html>
