Shorten this text (unless anyone objects)

--- a/extension/options.html
+++ b/extension/options.html
@@ -30,7 +30,7 @@
       <option value="google">Google</option>
       <option value="bing">Bing</option>
       <option value="ddg">DuckDuckGo</option>
-      <option value="sse">the Scratch search engine (will use Google for forums)</option>
+      <option value="sse">the Scratch search engine</option>
     </select>
     as the navbar search engine.
   </label>
