Make forum quotes scrollable

--- a/extension/options.html
+++ b/extension/options.html
@@ -31,6 +31,10 @@
   <label>
     <input type="checkbox" id="bb-wiki">
     Replace <b>About</b> with <b>Wiki</b>.
+  </label><br>
+  <label>
+    <input type="checkbox" id="scrollable-quotes">
+    Make long forum quotes scrollable.
   </label>
   <h2>Search</h2>
   <label>
