Worked on night mode

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -29,6 +29,7 @@
     border: 0;
     transition: all .1s;
     cursor: pointer;
+    outline: none;
   }
   .btn:hover {
     background-color: #2694cb;
@@ -36,8 +37,11 @@
   </style>
 </head>
 <body>
-<div style="width:120px;">
-<button class="btn" id="view-messages" title="View Messages">notifications</button><button class="btn" id="new-project" title="New Project">add_circle</button><button class="btn" id="settings" title="Furball Settings">menu</button>
+<div style="width:80px;">
+<button class="btn" id="view-messages" title="View Messages">notifications</button><button class="btn" id="new-project" title="New Project">add_circle</button>
+</div>
+<div style="width:80px;">
+<button class="btn" id="night-mode" title="Night Mode">brightness_3</button><button class="btn" id="settings" title="Furball Settings">menu</button>
 </div>
 <script src="popup.js"></script>
 </body>
