Added more forum options

--- a/extension/options.html
+++ b/extension/options.html
@@ -31,10 +31,19 @@
   <label>
     <input type="checkbox" id="bb-wiki">
     Replace <b>About</b> with <b>Wiki</b>.
-  </label><br>
+  </label>
+  <h2>Discussion Forums</h2>
   <label>
     <input type="checkbox" id="scrollable-quotes">
     Make long forum quotes scrollable.
+  </label><br>
+  <label>
+    <input type="checkbox" id="auto-embed">
+    Automatically embed linked projects in forum topics.
+  </label><br>
+  <label>
+    <input type="checkbox" id="linkify">
+    Automatically linkify usernames in the forum topics.
   </label>
   <h2>Search</h2>
   <label>
